fix: fix alignments on style sheet
Removed border radius in first column img tag. Fixed alingments in second and third column respectively. This solved the way the page shrinks.

--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ p, img{
 img{
     width: 400px;
     height: 250px;
-    border-radius: 5px;
 }
 
 button{
@@ -90,7 +89,8 @@ button{
 .second-column{
     font-family: "DM Sans";
     text-align: center;
-    margin: 48px;
+    margin: 48px auto;
+    width: 50%;
 }
 
 /* title head */
@@ -105,12 +105,13 @@ button{
 .img-content{
     display: flex;
     justify-content: center;
-    gap: 52px;
+    gap: 82px;
 }
 
 .batman-image{
     width: 100px;
     height: 100px;
+    border-radius: 10%;
 }
 
 .info{
@@ -149,8 +150,7 @@ button{
 
 /* Fourth box of the page */
 .fourth-column{
-    margin: 48px auto;
-    width: 50%;
+    margin: 48px;
     padding: 48px;
     background-color: #3882F6;
     border-radius: 5px;
